Creación de responsive media queries para Tablet

--- a/identidad.html
+++ b/identidad.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width">
   <title> Identidad </title>
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="style.css">
@@ -38,7 +39,7 @@
 
       <p>Marca personal para diseñadora</p>
 
-      <div class="gallery3 popup-link">
+      <div class="gallery1 popup-link">
         <figure class="gallery__item gallery__item--51 png">
           <a href="img/Pulido.png">
           <img src="img/Pulido.png" class="gallery__img" alt="Image 51">
@@ -75,26 +76,23 @@
           </a>
         </figure>
 
-        <figure class="gallery__item gallery__item--57">
-          <p class="textIdentidad">
-            Hablando con Alejandra descubrí en ella una pasión sobre la naturaleza y
-            más sobre la naturalidad, tanto en el entorno como en el cuerpo. <br><br>
-            Busqué resolver el problema de la identidad definiendo tres valores que
-            definian tanto su trabajo como su persona, la versatilidad, el impacto y la
-            organicidad, por lo que escogí de su amplió repertorio de fotografías las que
-            evocarán estos valores. <br><br>
-            La paleta de color y la tipografia se definió a partir de una serie de sus
-            trabajos donde los colores azules y amarillos eran abundantes, y las formas
-            organicas y fluidas. <br><br>
-            Por último el repetido uso del cuerpo como gráfica identitaria debido a este
-            como un concepto que abarca los tres conceptos, la verstailidad, en cuanto
-            al gran numero de metaforas y alusiones que le damos a este, la organicidad
-            por lo natural de sus lineas y sus formas, mas arbitrarias que pensadas y por
-            último el impacto que este genera mediante la expresividad que tiene.}
-          </p>
-        </figure>
-
       </div>
+      <p class="textIdentidad">
+        Hablando con Alejandra descubrí en ella una pasión sobre la naturaleza y
+        más sobre la naturalidad, tanto en el entorno como en el cuerpo. <br><br>
+        Busqué resolver el problema de la identidad definiendo tres valores que
+        definian tanto su trabajo como su persona, la versatilidad, el impacto y la
+        organicidad, por lo que escogí de su amplió repertorio de fotografías las que
+        evocarán estos valores. <br><br>
+        La paleta de color y la tipografia se definió a partir de una serie de sus
+        trabajos donde los colores azules y amarillos eran abundantes, y las formas
+        organicas y fluidas. <br><br>
+        Por último el repetido uso del cuerpo como gráfica identitaria debido a este
+        como un concepto que abarca los tres conceptos, la verstailidad, en cuanto
+        al gran numero de metaforas y alusiones que le damos a este, la organicidad
+        por lo natural de sus lineas y sus formas, mas arbitrarias que pensadas y por
+        último el impacto que este genera mediante la expresividad que tiene.}
+      </p>
     </section>
 
     <section class="container">
@@ -102,7 +100,7 @@
 
       <p>Identidad corporativa para producto químico</p>
 
-      <div class="gallery3 popup-link">
+      <div class="gallery1 popup-link">
         <figure class="gallery__item gallery__item--58 png">
           <a href="img/exagon.png">
           <img src="img/exagon.png" class="gallery__img" alt="Image 58">
@@ -139,27 +137,24 @@
           </a>
         </figure>
 
-        <figure class="gallery__item gallery__item--64">
-          <p class="textIdentidad">
-            La identidad visual de Exagon tiene un concepto enfocado en la dualidad de
-            Industria-Ecología que presenta la empresa. Este concepto explicito en la
-            conjunción de las formas y colores elegidos para la identidad, primero en la
-            forma y estructura del identificador y segundo en la eleccion de color del
-            mismo.<br><br> Sin dejar de lado claro está la utilización del hexagono utilizado en
-            la construcción tanto del simbolo como de la gráfica complementaría. Y
-            como último recurso la utilización del patrón generado por la aproximación
-            de los hexágonos como referencia al panal de las abejas, siendo estas parte
-            importante del proceso del producto estrella de la empresa.
-          </p>
-        </figure>
-
       </div>
+      <p class="textIdentidad">
+        La identidad visual de Exagon tiene un concepto enfocado en la dualidad de
+        Industria-Ecología que presenta la empresa. Este concepto explicito en la
+        conjunción de las formas y colores elegidos para la identidad, primero en la
+        forma y estructura del identificador y segundo en la eleccion de color del
+        mismo.<br><br> Sin dejar de lado claro está la utilización del hexagono utilizado en
+        la construcción tanto del simbolo como de la gráfica complementaría. Y
+        como último recurso la utilización del patrón generado por la aproximación
+        de los hexágonos como referencia al panal de las abejas, siendo estas parte
+        importante del proceso del producto estrella de la empresa.
+      </p>
     </section>
 
     <section class="container">
       <h1 class="titularSectionTitle">Otros desarrollos de identidad</h1>
 
-      <div class="gallery3 popup-link">
+      <div class="gallery1 popup-link">
         <figure class="gallery__item gallery__item--65 png">
           <a href="img/Ari Bakery-09.png">
           <img src="img/Ari Bakery-09.png" class="gallery__img" alt="Image 65">
