--- a/ilustracion.html
+++ b/ilustracion.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width">
   <title> Ilustración </title>
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="style.css">
@@ -37,7 +38,7 @@
       <h1 class="titularSectionTitle">Postales - Mi Barrio</h1>
       <p>Dirección, fotografía y edición Axel Castro - Ilustración Daniel Palchucán</p>
 
-      <div class="gallery popup-link">
+      <div class="gallery2 popup-link">
         <figure class="gallery__item gallery__item--17">
           <a href="img/Postal 1.jpg">
             <img src="img/Postal 1.jpg" class="gallery__img" alt="Image 17">
