--- a/marketing.html
+++ b/marketing.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title> Marketing </title>
+  <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="magnific-popup.css">
