--- a/index.html
+++ b/index.html
@@ -53,21 +53,23 @@
           <h2 class="section-title">UX/UI</h2>
           <p class="section-subtitle">Da clic en la imagen del proyecto para verlo en detalle</p>
           <div class="project-grid">
-            <article class="project-card">
-              <a href="https://www.behance.net/gallery/175467979/Prototipo-de-videojuego-The-Stranger"><img src="https://cdn.builder.io/api/v1/image/assets/TEMP/c83c70c94efcf99eaddb38f6a25857a8a8a4d6e0" alt="The Stranger" class="project-img--4 aspect-[1.29]" /></a>
+            <div class="project-card">
+              <a href="https://www.behance.net/gallery/175467979/Prototipo-de-videojuego-The-Stranger">
+                <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/c83c70c94efcf99eaddb38f6a25857a8a8a4d6e0" alt="The Stranger" class="project-img--4 aspect-[1.29]" />
+              </a>
               <div class="project-text">
                 <h3 class="project-title">The Stranger</h3>
                 <p class="project-desc">Propuesta de videojuego sobre salud mental y fantasía.<br><br>Es una propuesta de videojuego independiente enfocada en visibilizar los trastornos mentales y sugerir mecanismos de ayuda a través de una historia de fantasía.</p>
               </div>
-            </article>
-            <article class="project-card">
+            </div>
+            <div class="project-card">
               <a href="https://www.behance.net/gallery/174815045/UX-l-UI-Mentes-en-Accion"><img src="https://cdn.builder.io/api/v1/image/assets/TEMP/254bf06260a0becfdc9087b0e8e7066b2888be64" alt="App Mentes en Acción" class="project-img--4 aspect-[1.3]" /></a>
               <div class="project-text">
                 <h3 class="project-title">Mentes en Acción</h3>
                 <p class="project-desc">Evaluación de usabilidad para adultos mayores.<br><br>Este proyecto es un diagnóstico de usabilidad de un prototipo de aplicación móvil llamada "Mentes en acción" aplicando el protocolo de pensamiento manifestado. Creamos un protocolo para un test de 15 tareas orientadas a adultos mayores de 65 años, con el fin de obtener insights acerca de su experiencia de uso. A partir de los hallazgos obtenidos realizamos un análisis y generamos sugerencias para resolver los problemas identificados.</p>
               </div>
-            </article>
-            <article class="project-card">
+            </div>
+            <div class="project-card">
               <a href="https://www.behance.net/gallery/170343825/Analisis-de-usabilidad-Logicubes"><img src="https://cdn.builder.io/api/v1/image/assets/TEMP/65e43c71ad3917bc1a930cc49324cc4dd0dbd1ff" alt="LogiCubes" class="project-img--4 aspect-[1.28]" /></a>
               <div class="project-text">
                 <h3 class="project-title">LogiCubes</h3>
@@ -75,7 +77,7 @@
                                         Logicubes: The Path es un videojuego en proceso creado por la desarrolladora colombiana Indie Level Studio. Es un puzzle donde se avanza mediante comandos que desarrollan habilidades necesarias para llegar a programar.
                                         <br>Revisamos distintos aspectos que influyen en la interacción de los jugadores con el juego y su experiencia con este. Usamos una evaluación heurística en pruebas de usuarios para medir la usabilidad y satisfacción del videojuego, analizamos los datos recaudados en las pruebas y sugerimos opciones de mejora para afrontar los problemas que encontramos en el juego.</p>
               </div>
-            </article>
+            </div>
           </div>
         </div>
       </section>
@@ -95,19 +97,21 @@
                 <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/e81dd93f27616d1ff6b5a853718b324cb749a524" alt="Ilustración 1" class="project-img--3" />
               </div>
                <div class="gallery"> 
-                <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/31aec5b0ff208f916593fdba1b7d61a6f1f829db" alt="Ilustración 1" class="project-img" />
-                <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/3448f13dad91c54413b5df9f369fc88640cedf62" alt="Ilustración 2" class="project-img" />
-                <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/740d439bd295c984f222dab528833352d7ac689e" alt="Ilustración 3" class="project-img" />
+                <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/31aec5b0ff208f916593fdba1b7d61a6f1f829db" alt="Ilustración 1" class="project-img--5" />
+                <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/3448f13dad91c54413b5df9f369fc88640cedf62" alt="Ilustración 2" class="project-img--5" />
+                <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/740d439bd295c984f222dab528833352d7ac689e" alt="Ilustración 3" class="project-img--5" />
               </div>
                <div class="gallery"> 
-                <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/2104f1798c69dba69f6ea3b1a8b8cfe8c92a75bc" alt="Ilustración 1" class="project-img" />
-                <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/ff047b4fa5a75969294c1a029efdbb8d6fda5f6b" alt="Ilustración 2" class="project-img" />
-                <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/80e9da252c4cf1cbd0071b594edef8f17fd2c88d" alt="Ilustración 3" class="project-img" />
+                <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/2104f1798c69dba69f6ea3b1a8b8cfe8c92a75bc" alt="Ilustración 1" class="project-img--5" />
+                <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/ff047b4fa5a75969294c1a029efdbb8d6fda5f6b" alt="Ilustración 2" class="project-img--5" />
+                <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/80e9da252c4cf1cbd0071b594edef8f17fd2c88d" alt="Ilustración 3" class="project-img--5" />
               </div>
                <div class="gallery"> 
-                <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/7f8aebe38d22ef19d838d0ef1fb4c615051a0433" alt="Ilustración 1" class="project-img" />
-                <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/7c8135df60c958c0401eef3b30c0e1d2d48647c9" alt="Ilustración 2" class="project-img" />
-                <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/ac72e892b0c46bf2af49bb5fd03fc2cc31406b17" alt="Ilustración 3" class="project-img" />
+                <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/7f8aebe38d22ef19d838d0ef1fb4c615051a0433" alt="Ilustración 1" class="project-img--5" />
+                <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/7c8135df60c958c0401eef3b30c0e1d2d48647c9" alt="Ilustración 2" class="project-img--5" />
+                <div class="perro">
+                  <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/ac72e892b0c46bf2af49bb5fd03fc2cc31406b17" alt="Ilustración 3" class="project-img--5" />
+                </div>
               </div>
               <div class="gallery gallery--2"> 
                 <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/237cfcc8dfd6d0b367d0a802a121a8e0e8a09c12" alt="Ilustración 1" class="project-img--3" />
